started to style the menus

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,3 +2,15 @@
 
 $primary-color:#226fff;
 $secondary-color:#ff7e22;
+
+$fill-color:#ffffff;
+
+
+
+
+// media query variables
+
+$breakpoint-small: 576px;
+$breakpoint-medium: 768px;
+$breakpoint-large: 992px;
+$breakpoint-xl: 1200px;
