--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,8 +1,15 @@
 @use '../abstracts/index' as *;
 
 *{
+    font-size: 16px;
     a{
         text-decoration: none;
         color: $primary-color;
     }
+}
+
+.main {
+    margin-left: 160px;
+    width: 85.15vw;
+    background: $primary-color;
 }
