--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,1 +1,44 @@
 @use '../abstracts/index' as *;
+
+header {
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    background: url(assets/banner.jpg);
+    background-repeat: no-repeat;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;;
+}
+
+#introduction {
+    padding: 40vh 0 0;
+}
+
+#scroll-call {
+    padding: 40vh 0 0;
+}
+
+#me {
+    font-size: 45px;
+}
+
+#role {
+    font-size: 25px;
+    padding: 50px 0 0;
+}
+
+#scroll-call-arrow {
+    border: solid $fill-color;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+
+  @media screen and (min-width:$breakpoint-small) {
+    header {
+        width: calc(100% - 160px);
+        margin-left: 160px;
+    }
+  }
