--- a/style.css
+++ b/style.css
@@ -54,20 +54,23 @@ table {
 /* /CSS reset */
 * {
   font-size: 16px;
+  color: #ffffff;
 }
 * a {
   text-decoration: none;
-  color: #226fff;
 }
 
 .main {
-  margin-left: 160px;
-  width: 85.15vw;
+  width: 100vw;
   background: #226fff;
+  font-family: "Roboto Slab", serif;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  background-size: contain;
 }
 
 .small-nav {
-  float: left;
   width: 50px;
   height: 50px;
   background: #226fff;
@@ -75,6 +78,11 @@ table {
   align-items: center;
   text-align: center;
   border-radius: 3px;
+  font-family: "Roboto", sans-serif;
+  z-index: 1;
+  padding: 5px;
+  position: fixed;
+  margin: 20px 0 0 20px;
 }
 
 .menu-line {
@@ -97,15 +105,40 @@ table {
   left: 0;
   flex-direction: column;
   text-align: center;
+  background-color: #226fff;
+  border-right: #ffffff 2px solid;
+  font-family: "Roboto", sans-serif;
 }
 
 .big-nav a {
-  padding: 6px 8px 6px 16px;
-  font-size: 18px;
+  color: #ffffff;
+}
+
+.big-nav a:hover {
+  color: #ff7e22;
 }
 
 .block-letter {
-  font-size: 30px;
+  padding: 20px 0px 20px;
+  border-bottom: #ffffff 2px solid;
+  width: 160px;
+  font-size: 60px;
+}
+
+.big-nav-list {
+  padding: 30px 0 20px;
+  font-size: 18px;
+}
+.big-nav-list li {
+  padding: 10px 0;
+}
+
+.social-media {
+  margin: 0px 20px;
+}
+
+.fa-linkedin:hover {
+  color: #ff7e22;
 }
 
 @media screen and (min-width: 576px) {
@@ -115,5 +148,47 @@ table {
 
   .big-nav {
     display: flex;
+  }
+}
+header {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  background: url(assets/banner.jpg);
+  background-repeat: no-repeat;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
+}
+
+#introduction {
+  padding: 40vh 0 0;
+}
+
+#scroll-call {
+  padding: 40vh 0 0;
+}
+
+#me {
+  font-size: 45px;
+}
+
+#role {
+  font-size: 25px;
+  padding: 50px 0 0;
+}
+
+#scroll-call-arrow {
+  border: solid #ffffff;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+@media screen and (min-width: 576px) {
+  header {
+    width: calc(100% - 160px);
+    margin-left: 160px;
   }
 }/*# sourceMappingURL=style.css.map */
