--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,6 +1,7 @@
 @use '../abstracts/index' as *;
 
 *{
+    box-sizing: border-box;
     font-size: 16px;
     color: $fill-color;
     a{
@@ -16,4 +17,14 @@
     justify-content: center;
     text-align: center;
     background-size: contain;
+    margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Roboto', sans-serif;
 }
