--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/index' as *;
 
 header {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     text-align: center;
     background: url(assets/banner.jpg);
@@ -11,11 +11,21 @@ header {
 }
 
 #introduction {
-    padding: 40vh 0 0;
+    display: flex;
+    flex-direction: column;
+    height: 80vh;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
-#scroll-call {
-    padding: 40vh 0 0;
+#scroll-area {
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 #me {
@@ -38,7 +48,12 @@ header {
 
   @media screen and (min-width:$breakpoint-small) {
     header {
-        width: calc(100% - 160px);
+        width: calc(100% - 163px);
         margin-left: 160px;
     }
+
+    // #scroll-area {
+    //     width: calc(100vw - 162px);
+    //     margin-left: 160px;
+    // }
   }
