--- a/scss/partials/_navs.scss
+++ b/scss/partials/_navs.scss
@@ -1,16 +1,16 @@
 @use '../abstracts/index' as *;
 
 .small-nav {
-    width: 50px;
-    height: 50px;
-    background: $primary-color;
+    width: 60px;
+    height: 60px;
+    background: $secondary-color;
     justify-content: space-around;
     align-items: center;
     text-align: center;
     border-radius: 3px;
     font-family: 'Roboto', sans-serif;
     z-index: 1;
-    padding: 5px;
+    padding: 5px 5px 5px 5px;
     position: fixed;
     margin: 20px 0 0 20px;
 }
