--- a/scss/partials/_projects.scss
+++ b/scss/partials/_projects.scss
@@ -1,1 +1,63 @@
 @use '../abstracts/index' as *;
+
+.projects {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.project {
+    background-image: url(assets/coding-placeholder.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 200px;
+    margin: 10px 0;
+    border: $fill-color 2px solid;
+    padding-top: 170px;
+}
+
+.project-button {
+    width: 100px;
+    height: 40px;
+    border: solid $primary-color 3px;
+    border-radius: 3px;
+    background-color: $primary-color;
+    font-size: 16px;
+    padding: 3px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.project-button:hover {
+    background-color: $secondary-color;
+    border-color: $secondary-color;
+}
+
+#project-one,
+#project-two,
+#project-three,
+#project-four,
+#project-five,
+#project-six {
+    margin-left: -50px;
+}
+
+#read-more-one,
+#read-more-two,
+#read-more-three,
+#read-more-four,
+#read-more-five,
+#read-more-six {
+    margin-left: 60px;
+    margin-right: -40px;
+}
+
+@media screen and (min-width:$breakpoint-small) {
+    .projects {
+        width: calc(99% - 163px);
+        margin-left: 160px;
+    }
+  }
