--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ table {
 
 /* /CSS reset */
 * {
+  box-sizing: border-box;
   font-size: 16px;
   color: #ffffff;
 }
@@ -68,19 +69,29 @@ table {
   justify-content: center;
   text-align: center;
   background-size: contain;
+  margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", sans-serif;
 }
 
 .small-nav {
-  width: 50px;
-  height: 50px;
-  background: #226fff;
+  width: 60px;
+  height: 60px;
+  background: #ff7e22;
   justify-content: space-around;
   align-items: center;
   text-align: center;
   border-radius: 3px;
   font-family: "Roboto", sans-serif;
   z-index: 1;
-  padding: 5px;
+  padding: 5px 5px 5px 5px;
   position: fixed;
   margin: 20px 0 0 20px;
 }
@@ -151,7 +162,7 @@ table {
   }
 }
 header {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   text-align: center;
   background: url(assets/banner.jpg);
@@ -161,11 +172,21 @@ header {
 }
 
 #introduction {
-  padding: 40vh 0 0;
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
-#scroll-call {
-  padding: 40vh 0 0;
+#scroll-area {
+  display: flex;
+  flex-direction: column;
+  height: 20vh;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 #me {
@@ -188,7 +209,68 @@ header {
 
 @media screen and (min-width: 576px) {
   header {
-    width: calc(100% - 160px);
+    width: calc(100% - 163px);
+    margin-left: 160px;
+  }
+}
+.projects {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.project {
+  background-image: url(assets/coding-placeholder.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 200px;
+  margin: 10px 0;
+  border: #ffffff 2px solid;
+  padding-top: 170px;
+}
+
+.project-button {
+  width: 100px;
+  height: 40px;
+  border: solid #226fff 3px;
+  border-radius: 3px;
+  background-color: #226fff;
+  font-size: 16px;
+  padding: 3px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.project-button:hover {
+  background-color: #ff7e22;
+  border-color: #ff7e22;
+}
+
+#project-one,
+#project-two,
+#project-three,
+#project-four,
+#project-five,
+#project-six {
+  margin-left: -50px;
+}
+
+#read-more-one,
+#read-more-two,
+#read-more-three,
+#read-more-four,
+#read-more-five,
+#read-more-six {
+  margin-left: 60px;
+  margin-right: -40px;
+}
+
+@media screen and (min-width: 576px) {
+  .projects {
+    width: calc(99% - 163px);
     margin-left: 160px;
   }
 }/*# sourceMappingURL=style.css.map */
