I added about. i styled about projects and contact

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -9,8 +9,7 @@
     }
 }
 
-.main {
-    width: 100vw;
+body {
     background: $primary-color;
     font-family: 'Roboto Slab', serif;
     align-content: center;
