--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,13 +1,12 @@
 @use '../abstracts/index' as *;
 
 header {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     text-align: center;
     background: url(assets/banner.jpg);
     background-repeat: no-repeat;
     justify-content: center;
-    font-family: 'Roboto', sans-serif;;
 }
 
 #introduction {
@@ -26,6 +25,7 @@ header {
     text-align: center;
     align-items: center;
     justify-content: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 #me {
@@ -48,12 +48,7 @@ header {
 
   @media screen and (min-width:$breakpoint-small) {
     header {
-        width: calc(100% - 163px);
+        width: calc(100% - 160px);
         margin-left: 160px;
     }
-
-    // #scroll-area {
-    //     width: calc(100vw - 162px);
-    //     margin-left: 160px;
-    // }
   }
