--- a/scss/partials/_navs.scss
+++ b/scss/partials/_navs.scss
@@ -35,7 +35,7 @@
     left: 0;
     flex-direction: column;
     text-align: center;
-    background-color: $primary-color;
+    background-color: $secondary-color;
     border-right: $fill-color 2px solid;
     font-family: 'Roboto', sans-serif;
 }
@@ -45,14 +45,14 @@
 }
 
 .big-nav a:hover {
-    color: $secondary-color;
+    color: $primary-color;
 }
 
 .block-letter {
-    padding: 20px 0px 20px;
+    padding: 30px 0px 30px;
     border-bottom: $fill-color 2px solid;
     width: 160px;
-    font-size: 60px;
+    font-size: 80px;
 }
 
 .big-nav-list {
@@ -69,7 +69,8 @@
 }
 
 .fa-linkedin:hover {
-    color:$secondary-color;
+    color:$primary-color;
+    background-color: $fill-color;
 }
 
 
