--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ table {
   text-decoration: none;
 }
 
-.main {
-  width: 100vw;
+body {
   background: #226fff;
   font-family: "Roboto Slab", serif;
   align-content: center;
@@ -116,7 +115,7 @@ h6 {
   left: 0;
   flex-direction: column;
   text-align: center;
-  background-color: #226fff;
+  background-color: #ff7e22;
   border-right: #ffffff 2px solid;
   font-family: "Roboto", sans-serif;
 }
@@ -126,14 +125,14 @@ h6 {
 }
 
 .big-nav a:hover {
-  color: #ff7e22;
+  color: #226fff;
 }
 
 .block-letter {
-  padding: 20px 0px 20px;
+  padding: 30px 0px 30px;
   border-bottom: #ffffff 2px solid;
   width: 160px;
-  font-size: 60px;
+  font-size: 80px;
 }
 
 .big-nav-list {
@@ -149,7 +148,8 @@ h6 {
 }
 
 .fa-linkedin:hover {
-  color: #ff7e22;
+  color: #226fff;
+  background-color: #ffffff;
 }
 
 @media screen and (min-width: 576px) {
@@ -162,13 +162,12 @@ h6 {
   }
 }
 header {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   text-align: center;
   background: url(assets/banner.jpg);
   background-repeat: no-repeat;
   justify-content: center;
-  font-family: "Roboto", sans-serif;
 }
 
 #introduction {
@@ -187,6 +186,7 @@ header {
   text-align: center;
   align-items: center;
   justify-content: center;
+  font-family: "Roboto", sans-serif;
 }
 
 #me {
@@ -209,7 +209,7 @@ header {
 
 @media screen and (min-width: 576px) {
   header {
-    width: calc(100% - 163px);
+    width: calc(100% - 160px);
     margin-left: 160px;
   }
 }
@@ -221,14 +221,20 @@ header {
 }
 
 .project {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-image: url(assets/coding-placeholder.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
   height: 200px;
-  margin: 10px 0;
+  margin: 20px 0 0 0;
   border: #ffffff 2px solid;
-  padding-top: 170px;
+  padding-top: 140px;
+  padding-bottom: 10px;
+  padding-left: 4px;
+  text-align: left;
 }
 
 .project-button {
@@ -239,9 +245,6 @@ header {
   background-color: #226fff;
   font-size: 16px;
   padding: 3px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
 }
 
 .project-button:hover {
@@ -249,28 +252,87 @@ header {
   border-color: #ff7e22;
 }
 
-#project-one,
-#project-two,
-#project-three,
-#project-four,
-#project-five,
-#project-six {
-  margin-left: -50px;
-}
-
-#read-more-one,
-#read-more-two,
-#read-more-three,
-#read-more-four,
-#read-more-five,
-#read-more-six {
-  margin-left: 60px;
-  margin-right: -40px;
+.project-title {
+  font-family: "Roboto", sans-serif;
 }
 
 @media screen and (min-width: 576px) {
   .projects {
     width: calc(99% - 163px);
     margin-left: 160px;
+  }
+
+  .project {
+    margin-left: 5px;
+  }
+}
+#contact-area {
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0 0;
+  justify-content: space-between;
+}
+#contact-area h2 {
+  font-size: 40px;
+}
+#contact-area h4 {
+  font-size: 20px;
+}
+#contact-area p {
+  font-size: 13px;
+  margin: 10px 0;
+}
+#contact-area form {
+  margin: 20px 0 0;
+}
+#contact-area input,
+#contact-area textarea {
+  margin: 15px 0 0;
+}
+
+#contact-methods {
+  margin: 10px 0;
+}
+
+#about-page {
+  width: 100vw;
+  height: 100vh;
+}
+
+#about-title {
+  display: flex;
+  font-size: 35px;
+  height: 200px;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 576px) {
+  #about-page {
+    width: calc(100% - 163px);
+    margin-left: 160px;
+  }
+
+  #about-container {
+    width: 300px;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  #about-container {
+    width: 500px;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 992px) {
+  #about-container {
+    width: 700px;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  #about-container {
+    width: 1000px;
+    margin: auto;
   }
 }/*# sourceMappingURL=style.css.map */
