--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,5 @@
 @use 'scss/partials/navs';
 @use 'scss/partials/header';
 @use 'scss/partials/projects';
+@use 'scss/partials/contact';
+@use 'scss/partials/about';
