Added pages, content and styled them

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,11 +2,9 @@
 
 $primary-color:#226fff;
 $secondary-color:#ff7e22;
+$tertiary-color: #11CCED;
 
 $fill-color:#ffffff;
-
-
-
 
 // media query variables
 
