--- a/style.scss
+++ b/style.scss
@@ -5,3 +5,5 @@
 @use 'scss/partials/projects';
 @use 'scss/partials/contact';
 @use 'scss/partials/about';
+@use 'scss/partials/SCSscheme';
+@use 'scss/partials/coding';
