I finished up a lot of things today.

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -6,6 +6,10 @@ $tertiary-color: #11CCED;
 
 $fill-color:#ffffff;
 
+$linkedin-color: #0E76A8;
+$github-color: #24292E;
+
+
 // media query variables
 
 $breakpoint-small: 576px;
