--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -52,4 +52,8 @@
           padding-left: 160px;
           margin: 20px 0 20px 0;
       }
+
+      .SCSscheme--card {
+          margin: 20px 0 20px 8%;
+      }
   }
