--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -47,6 +47,7 @@
 
 #scroll-up {
     margin-top: 20px;
+    padding-top: 20px;
 }
 
 @media screen and (min-width:$breakpoint-small) {
@@ -58,6 +59,14 @@
     #scroll-up {
         width: calc(100% - 163px);
         margin-left: 160px;
+    }
+}
+
+@media screen and (min-width:$breakpoint-medium) {
+    #contact-area {
+        p {
+            font-size: 16px;
+        }
     }
 }
 
