--- a/scss/partials/_navs.scss
+++ b/scss/partials/_navs.scss
@@ -60,19 +60,46 @@
     font-size: 18px;
 
     li {
-        padding: 10px 0;
+        padding: 15px 0;
     }
+}
+
+.contact-me-link {
+    border-top: 3px $fill-color solid;
+    border-bottom: 3px $fill-color solid;
+    font-size: 18px;
+    padding: 10px;
+    margin: 0 0 15px;
 }
 
 .social-media {
     margin: 0px 20px;
+    font-size: 24px;
 }
 
-.fa-linkedin:hover {
-    color:$primary-color;
-    background-color: $fill-color;
+.fa-linkedin-in {
+    color: $secondary-color;
+    background: $fill-color;
+    padding: 5px;
+    border-radius: 3px;
 }
 
+.fa-linkedin-in:hover {
+    color:$fill-color;
+    background-color: $linkedin-color;
+}
+
+.fa-github {
+    color: $secondary-color;
+    background: $fill-color;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.fa-github:hover {
+    color:$fill-color;
+    background-color: $github-color;
+}
 
 @media screen and (min-width:$breakpoint-small) {
     .small-nav {
