Finishing up the last bits of styling.

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // Colours
 
-$primary-color:#226fff;
+$primary-color:#455680;
 $secondary-color:#ff7e22;
-$tertiary-color: #11CCED;
+$tertiary-color:#11CCED;
 
 $fill-color:#ffffff;
 
@@ -16,3 +16,5 @@ $breakpoint-small: 576px;
 $breakpoint-medium: 768px;
 $breakpoint-large: 992px;
 $breakpoint-xl: 1200px;
+
+// #226fff
