--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -4,8 +4,9 @@ header {
     width: 100%;
     height: 100vh;
     text-align: center;
-    background: url(assets/banner.jpg);
+    background: url(assets/hero-image.JPG);
     background-repeat: no-repeat;
+    background-size: cover;
     justify-content: center;
 }
 
@@ -26,10 +27,11 @@ header {
     align-items: center;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
+    font-size: 20px;
 }
 
 #me {
-    font-size: 45px;
+    font-size: 35px;
 }
 
 #role {
@@ -41,5 +43,9 @@ header {
     header {
         width: calc(100% - 160px);
         margin-left: 160px;
+    }
+
+    #me {
+        font-size: 45px;
     }
 }
