--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ table {
 
 /* /CSS reset */
 body {
-  background: #226fff;
+  background: #455680;
   font-family: "Roboto Slab", serif;
   align-content: center;
   justify-content: center;
@@ -79,6 +79,7 @@ h4,
 h5,
 h6 {
   font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 
 .small-nav {
@@ -119,6 +120,7 @@ h6 {
   background-color: #ff7e22;
   border-right: #ffffff 2px solid;
   font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 
 .big-nav a {
@@ -126,7 +128,7 @@ h6 {
 }
 
 .big-nav a:hover {
-  color: #226fff;
+  color: #11CCED;
 }
 
 .block-letter {
@@ -194,8 +196,9 @@ header {
   width: 100%;
   height: 100vh;
   text-align: center;
-  background: url(assets/banner.jpg);
+  background: url(assets/hero-image.JPG);
   background-repeat: no-repeat;
+  background-size: cover;
   justify-content: center;
 }
 
@@ -216,10 +219,11 @@ header {
   align-items: center;
   justify-content: center;
   font-family: "Roboto", sans-serif;
+  font-size: 20px;
 }
 
 #me {
-  font-size: 45px;
+  font-size: 35px;
 }
 
 #role {
@@ -231,6 +235,10 @@ header {
   header {
     width: calc(100% - 160px);
     margin-left: 160px;
+  }
+
+  #me {
+    font-size: 45px;
   }
 }
 .projects {
@@ -250,19 +258,26 @@ header {
   width: 100%;
   height: 200px;
   margin: 20px 0 0 0;
-  border: #ffffff 2px solid;
+  border: #11CCED 2px solid;
+  border-radius: 13px;
   padding-top: 140px;
-  padding-bottom: 10px;
-  padding-left: 4px;
+  padding-bottom: 15px;
+  padding-left: 8px;
   text-align: left;
+  transition: transform 0.5s;
+}
+
+.project:hover {
+  transform: scale(1.1);
+  overflow: hidden;
 }
 
 .project-button {
   width: 100px;
   height: 40px;
-  border: solid #226fff 3px;
+  border: solid #455680 3px;
   border-radius: 3px;
-  background-color: #226fff;
+  background-color: #455680;
   font-size: 16px;
   padding: 3px;
 }
@@ -274,6 +289,24 @@ header {
 
 .project-title {
   font-family: "Roboto", sans-serif;
+}
+
+#project-one {
+  background: url(assets/netmattersfake.png);
+}
+
+#project-two {
+  background: url(assets/Axureproject.png);
+}
+
+#project-one,
+#project-two,
+#project-three,
+#project-four,
+#project-five,
+#project-six {
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 @media screen and (min-width: 576px) {
@@ -315,7 +348,7 @@ header {
 }
 #contact-area h4 {
   font-size: 20px;
-  color: #ff7e22;
+  color: #11CCED;
 }
 #contact-area h4:hover {
   text-decoration: underline;
@@ -370,13 +403,15 @@ header {
 }
 #about-page {
   height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 
 #about-me-paragraph {
   background-color: #11CCED;
   border-radius: 15px;
   padding: 30px;
-  box-shadow: 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.5);
   margin: 0 5%;
 }
 
@@ -396,7 +431,6 @@ header {
 
   #about-container {
     width: 300px;
-    margin: 160px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -443,7 +477,7 @@ header {
 }
 
 .treehouse_profile {
-  color: #226fff;
+  color: #455680;
 }
 
 .treehouse_profile:hover {
