--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .project {
@@ -365,10 +365,23 @@ header {
   overflow: auto;
   height: 140px;
 }
-#contact-area input,
-#contact-area textarea {
+
+.contact-form-input {
   margin: 15px 0 0;
   width: 80%;
+  font-family: "Roboto Slab", serif;
+}
+
+.contact-form-input::-moz-placeholder {
+  color: #ff7e22;
+}
+
+.contact-form-input:-ms-input-placeholder {
+  color: #ff7e22;
+}
+
+.contact-form-input::placeholder {
+  color: #ff7e22;
 }
 
 #contact-methods {
@@ -378,6 +391,7 @@ header {
 #scroll-up {
   margin-top: 20px;
   padding-top: 20px;
+  font-size: 20px;
 }
 
 @media screen and (min-width: 576px) {
@@ -508,6 +522,28 @@ header {
   font-size: 30px;
 }
 
+#coding-projects {
+  justify-content: space-around;
+}
+
+#coding-project-one {
+  background: url(assets/netmattersfake.png);
+}
+
+#coding-project-two {
+  background: url(assets/Axureproject.png);
+}
+
+#coding-project-one,
+#coding-project-two,
+#coding-project-three,
+#coding-project-four,
+#coding-project-five,
+#coding-project-six {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 @media screen and (min-width: 576px) {
   #coding-title {
     width: calc(100% - 160px);
@@ -537,6 +573,6 @@ header {
 }
 @media screen and (min-width: 1200px) {
   .coding-project {
-    flex-basis: 580px;
+    flex-basis: 530px;
   }
 }/*# sourceMappingURL=style.css.map */
