--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $secondary-color:#ff7e22;
 $tertiary-color:#11CCED;
 
 $fill-color:#ffffff;
+$alt-fill-color: #000000;
 
 $linkedin-color: #0E76A8;
 $github-color: #24292E;
