--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -8,6 +8,7 @@
 #SCSscheme {
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
 }
 
 .SCSscheme--card {
@@ -27,6 +28,11 @@
 .SCSscheme--card--title {
     font-size: 22px;
     margin: 0 0 15px;
+    color: $alt-fill-color;
+}
+
+.SCSscheme--card--filler {
+    color: $alt-fill-color;
 }
 
 .treehouse_profile {
