--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -7,6 +7,8 @@
 
 #coding-projects {
     justify-content: space-around;
+    margin-bottom: 50px;
+    padding: 0 15px;
 }
     
 #coding-project-one {
@@ -45,19 +47,19 @@
     }
 
     .coding-project {
-        flex-basis: 300px;
+        flex-basis: 260px;
         margin: 50px 0 0;
     }
 }
 
 @media screen and (min-width:$breakpoint-large) {
     .coding-project {
-        flex-basis: 450px;
+        flex-basis: 380px;
     }
 }
 
 @media screen and (min-width:$breakpoint-xl) {
     .coding-project {
-        flex-basis: 530px;
+        flex-basis: 460px;
     }
 }
