--- a/scss/partials/_projects.scss
+++ b/scss/partials/_projects.scss
@@ -98,6 +98,20 @@
     .project-mainpage {
         flex-basis: 250px;
     }
+
+    #project-two,
+    #project-five {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+@media screen and (min-width:$breakpoint-large) {
+    #project-two,
+    #project-five {
+        margin-left: 5px;
+        margin-right: 0px;
+    }
 }
 
 @media screen and (min-width:$breakpoint-xl) {
