--- a/style.css
+++ b/style.css
@@ -358,6 +358,19 @@ header {
   .project-mainpage {
     flex-basis: 250px;
   }
+
+  #project-two,
+#project-five {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+@media screen and (min-width: 992px) {
+  #project-two,
+#project-five {
+    margin-left: 5px;
+    margin-right: 0px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .project-mainpage {
