--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,7 +1,6 @@
 @use '../abstracts/index' as *;
 
 header {
-    width: 100%;
     height: 100vh;
     text-align: center;
 }
@@ -14,7 +13,7 @@ header {
     background-position: center;
     content: "";
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: -1;
     position: absolute;
 }
@@ -59,9 +58,15 @@ header {
 }
 
 @media screen and (min-width:$breakpoint-small) {
-    header {
-        width: calc(100% - 160px);
-        margin-left: 160px;
+    .hero-image {
+        width: calc(100% - 163px);
+        margin-left: 161px;
+    }
+
+    #introduction,
+    #scroll-area {
+        width: calc(100% - 163px);
+        margin-left: 161px;
     }
 
     #me {
