--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -25,8 +25,9 @@
 
 #about-title {
   display: flex;
-  font-size: 35px;
-  height: 200px;
+  font-size: 30px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   align-items: center;
   justify-content: center;
 }
@@ -35,6 +36,11 @@
   #about-page {
       width: calc(100% - 163px);
       margin-left: 160px;
+  }
+
+  #about-title {
+    font-size: 45px;
+    padding-top: 50px;
   }
 
   #about-container{
