--- a/scss/partials/_projects.scss
+++ b/scss/partials/_projects.scss
@@ -5,6 +5,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding: 0 25px;
+}
+
+.projects-mainpage {
+    margin: 75px 0 0;
 }
 
 .project {
@@ -24,10 +29,6 @@
     padding-left: 8px;
     text-align: left;
     transition: transform .5s;
-}
-
-.projects-mainpage {
-    padding: 0 15px;
 }
 
 .project:hover {
