Fixed some things brought up in review

--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -57,7 +57,7 @@
     }
   }
 
-  @media screen and (min-width:$breakpoint-large) {
+  @media screen and (min-width:1400px) {
       #SCSscheme {
           flex-direction: row;
           padding-left: 160px;
