--- a/style.css
+++ b/style.css
@@ -123,10 +123,6 @@ h6 {
   font-weight: 500;
 }
 
-.big-nav a {
-  color: #ffffff;
-}
-
 .big-nav a:hover {
   color: #11CCED;
 }
@@ -181,6 +177,10 @@ h6 {
 .fa-github:hover {
   color: #ffffff;
   background-color: #24292E;
+}
+
+.currentPage {
+  color: #11CCED;
 }
 
 @media screen and (min-width: 576px) {
@@ -281,24 +281,39 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-image: url(assets/coding-placeholder.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 200px;
   margin: 20px 0 0 0;
   border: #11CCED 2px solid;
   border-radius: 13px;
-  padding-top: 140px;
-  padding-bottom: 15px;
   padding-left: 8px;
   text-align: left;
-  transition: transform 0.5s;
+  padding-bottom: 15px;
 }
 
-.project:hover {
-  transform: scale(1.1);
-  overflow: hidden;
+.project-background {
+  content: "";
+  background: url(assets/coding-placeholder.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  width: 100%;
+  height: 300px;
+  border-radius: 13px;
+  position: relative;
+}
+
+.project-background::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.project:hover .project-title {
+  transform: translateY(-120px);
+  text-align: center;
 }
 
 .project-button {
@@ -318,6 +333,7 @@ header {
 
 .project-title {
   font-family: "Roboto", sans-serif;
+  margin-bottom: 10px;
 }
 
 #project-one {
@@ -348,23 +364,6 @@ header {
     margin-left: 5px;
   }
 }
-@media screen and (min-width: 768px) {
-  #projects {
-    display: flex;
-    -moz-columns: 2;
-         columns: 2;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .projects-mainpage {
-    padding: 0 0;
-  }
-
-  .project-mainpage {
-    flex-basis: 250px;
-  }
-}
 @media screen and (min-width: 955px) {
   #project-one,
 #project-two,
@@ -373,6 +372,14 @@ header {
 #project-five,
 #project-six {
     margin-left: 10px;
+  }
+
+  #projects {
+    display: flex;
+    -moz-columns: 2;
+         columns: 2;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 @media screen and (min-width: 992px) {
@@ -686,58 +693,11 @@ header {
   font-size: 30px;
 }
 
-#coding-projects {
-  justify-content: space-around;
-  margin-bottom: 50px;
-}
-
-#coding-project-one {
-  background: url(assets/netmattersfake.png);
-}
-
-#coding-project-two {
-  background: url(assets/Axureproject.png);
-}
-
-#coding-project-one,
-#coding-project-two,
-#coding-project-three,
-#coding-project-four,
-#coding-project-five,
-#coding-project-six {
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 @media screen and (min-width: 576px) {
   #coding-title {
     width: calc(100% - 160px);
     margin-left: 160px;
     padding: 50px 0;
     font-size: 45px;
-  }
-}
-@media screen and (min-width: 768px) {
-  #coding-projects {
-    display: flex;
-    -moz-columns: 2;
-         columns: 2;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .coding-project {
-    flex-basis: 260px;
-    margin: 50px 0 0;
-  }
-}
-@media screen and (min-width: 992px) {
-  .coding-project {
-    flex-basis: 380px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .coding-project {
-    flex-basis: 460px;
   }
 }/*# sourceMappingURL=style.css.map */
